k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joy
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service: {name: api, port: {number: 5000}}
      - path: /auth
        pathType: Prefix
        backend:
          service: {name: api, port: {number: 5000}}
      - path: /health
        pathType: Prefix
        backend:
          service: {name: api, port: {number: 5000}}
